# memson

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Procfile  README  README.md  add.js  app.json  bench.json  bench.sh  bench.txt  example.json
data/: db
src/: actor.rs  aggregate.rs  apply.rs  client.rs  cmd.rs  codec.rs  collection.rs  db.rs  err.rs  eval.rs  hdb.rs  inmem.rs  inmemdb.rs  json.rs  keyed.rs  lib.rs  log.rs  main.rs  ondisk.rs  ondiskdb.rs  query.rs  rdb.rs  replay.rs  server.rs  session.rs  storage.rs  table.rs  test_json.py
testdata/: db  snap.00000000000003C1
