[package]
name = "memson"
version = "0.1.0"
authors = ["jaupe <jaupe@protonmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-web = "3"
actix-rt = "1.*"
futures = "0.3"
rayon = "1.*"
rustyline = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["codec"] }

[dev-dependencies]
assert_approx_eq = "*"