[package]
name = "memson"
version = "0.1.0"
authors = ["jaupe <jaupe@protonmail.com>"]
edition = "2018"

[dependencies]
actix = "*"
actix-web = "*"
actix-rt = "*"
bincode = "*"
rayon = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
sled = "*"

[dev-dependencies]
assert_approx_eq = "*"